<resources>
    <string name="app_name">PhotoVideoViewer</string>
    <string name="photos_tab">Photos</string>
    <string name="videos_tab">Videos</string>
    <string name="albums_tab">Albums</string>
    <string name="explore_tab">Explore</string>
    <string name="play_video">Play video</string>
    <string name="more_option_fab">More option</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="sort_order">Sort Order</string>
    <string name="switch_layout_des">Change layout of items</string>
    <string name="sort_order_des">Sort by newest or oldest first</string>
    <string name="more">More</string>
    <string name="slide_show">Slide Show</string>
    <string name="setting">Setting</string>
    <string name="galley">Galley</string>
    <string name="title_activity_photo_view">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="your_image">Your image</string>
    <string name="favorite">Favorite</string>
    <string name="edit">Edit</string>
    <string name="set_as_background">Set as background</string>
    <string name="set_private">Set private</string>
    <string name="set_location">Set location</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="time">Time:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="path">Path:</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="location">Location:</string>
    <string name="unknown">Unknown</string>
    <string name="todo">TODO</string>
    <string name="set_private_to_public">Bring this image back to public?</string>
    <string name="set_public_to_private">Are you sure to move this image to secret place?</string>
    <string name="yes_im_sure">Yes, I\'m sure</string>
    <string name="cancel">Cancel</string>
    <string name="send_image">Send image</string>
    <string name="ask_sure_delete">Are you sure want to delete?</string>
    <string name="set_background_success">Set background successfully</string>
    <string name="copy_image_success">Copy image successfully</string>
    <string name="detail_info">Detail Info</string>
    <string name="duration">Duration</string>
    <string name="copy_successfully">Copy successfully</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="people">People</string>
    <string name="switch_theme">Switch theme</string>
    <string name="switch_language">Switch language</string>
    <string name="change_password">Change password</string>
    <string name="summary_theme">Off is Light mode, and On is Dark mode</string>
    <string name="summary_language">Off is Vietnamese, and On is English</string>
    <string name="summary_change_password">Click to show a change password dialog</string>
    <string name="title_dialog_change_pass">Change Password Of Private Album</string>
    <string name="textButtonChangePass">Private Album</string>
    <string name="oldpass">Old password</string>
    <string name="newpass">New password</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="emoji">Emoji</string>
    <string name="text">Text</string>
    <string name="save_edited_photo">Save edited photo?</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
</resources>