<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/bottomSheetLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        style="@style/Widget.Theme.PhotoVideoViewer.ButtonBar.Fullscreen"
        android:background="@drawable/bottom_sheet_bg"

        app:behavior_peekHeight="@dimen/_66sdp"
        app:layout_behavior="@string/bottom_sheet_behavior"

        android:fitsSystemWindows="true"
        android:clickable="true">

    <View
            android:id="@+id/bottomSheetExpander"

            android:layout_marginHorizontal="@dimen/_110sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp"

            android:layout_width="match_parent"
            android:layout_height="@dimen/_4sdp"
            android:background="@drawable/horizontal_line" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingHorizontal="15dp">

        <TextView
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                app:drawableTopCompat="@drawable/ic_baseline_favorite_24"

                android:layout_weight="1"
                />


        <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                app:drawableTopCompat="@drawable/ic_baseline_edit_24"

                android:layout_weight="1"
                />


        <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slide_show"
                app:drawableTopCompat="@drawable/ic_baseline_slideshow_24"

                android:layout_weight="1"
                />


        <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_as_background"
                app:drawableTopCompat="@drawable/ic_baseline_image_24"

                android:layout_weight="1"
                />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/horizontal_line"
            android:foreground="@color/gray"
            android:layout_marginTop="@dimen/_6sdp" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingHorizontal="15dp">

        <TextView
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_private"
                app:drawableTopCompat="@drawable/ic_baseline_lock_24"

                android:layout_weight="1" />


        <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_location"
                app:drawableTopCompat="@drawable/ic_baseline_location_on_24"

                android:layout_weight="1" />


    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/horizontal_line"
            android:foreground="@color/gray"
            android:layout_marginTop="@dimen/_6sdp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingHorizontal="15dp">

        <TextView
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                app:drawableTopCompat="@drawable/ic_baseline_share_24"

                android:layout_weight="1" />


        <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                app:drawableTopCompat="@drawable/ic_baseline_content_copy_24"

                android:layout_weight="1" />

        <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:drawableTopCompat="@drawable/ic_baseline_delete_24"

                android:layout_weight="1" />

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/horizontal_line"
            android:foreground="@color/gray"
            android:layout_marginTop="@dimen/_6sdp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/nameTV" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/lorem"
                android:id="@+id/photoNameText" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/size"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"

                android:id="@+id/sizeTV" />

        <TextView
                android:id="@+id/sizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/time"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/timeLabel" />

        <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/location"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/locationLabel" />

        <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dimensions"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/dimensionLabel" />

        <TextView
                android:id="@+id/dimensionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />

        <TextView
                android:id="@+id/pathLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/path"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/pathText"


                android:text="@string/lorem" />
    </LinearLayout>
</LinearLayout>
