<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottomSheetLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="@drawable/bottom_sheet_bg"

        app:behavior_peekHeight="@dimen/_20sdp"
        app:layout_behavior="@string/bottom_sheet_behavior"

        android:fitsSystemWindows="true"
        android:clickable="true"
        android:focusable="true">

    <View
            android:id="@+id/bottomSheetExpander"

            android:layout_marginHorizontal="@dimen/_110sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp"

            android:layout_width="match_parent"
            android:layout_height="@dimen/_4sdp"
            android:background="@drawable/horizontal_line" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingHorizontal="15dp">

        <TextView
                android:id="@+id/favoriteText"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                app:drawableTopCompat="@drawable/ic_baseline_favorite_24"

                android:layout_weight="1"
                />

        <TextView
                android:id="@+id/copyText"

                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                app:drawableTopCompat="@drawable/ic_baseline_content_copy_24"

                android:layout_weight="1" />

        <TextView
                android:id="@+id/deleteText"

                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:drawableTopCompat="@drawable/ic_baseline_delete_24"

                android:layout_weight="1" />

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/horizontal_line"
            android:foreground="@color/gray"
            android:layout_marginTop="@dimen/_6sdp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/nameLabel" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/lorem"
                android:id="@+id/videoNameText" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/size"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"

                android:id="@+id/sizeLabel" />

        <TextView
                android:id="@+id/sizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/time"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/timeLabel" />

        <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/duration"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/durationLabel" />

        <TextView
                android:id="@+id/durationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/lorem" />

        <TextView
                android:id="@+id/pathLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/path"
                android:textStyle="bold"
                android:textColor="@color/gray"


                android:layout_marginTop="@dimen/_15sdp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/pathText"


                android:text="@string/lorem" />
    </LinearLayout>

</LinearLayout>