<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

            <ImageView
                    android:id="@+id/undoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_undo_24"
                    android:contentDescription="@string/lorem" />

            <View
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="0dp"/>

            <ImageView
                    android:id="@+id/redoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_redo_24"
                    android:contentDescription="@string/lorem" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

            <ImageView
                    android:id="@+id/saveText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/lorem"
                    android:src="@drawable/ic_baseline_save_24" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/brushText"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/brush"
                app:drawableTopCompat="@drawable/ic_baseline_brush_24"

                android:layout_weight="1"
                />
        <TextView
                android:id="@+id/eraserText"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eraser"
                app:drawableTopCompat="@drawable/eraser"

                android:layout_weight="1"
                />
        <TextView
                android:id="@+id/textText"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text"
                app:drawableTopCompat="@drawable/ic_baseline_text_fields_24"

                android:layout_weight="1"
                />
        <TextView
                android:id="@+id/emojiText"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/emoji"
                app:drawableTopCompat="@drawable/ic_baseline_emoji_emotions_24"

                android:layout_weight="1"
                />
    </LinearLayout>

    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/colorContainerLayout">
            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#000"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#FFF"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#FFCCBC"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#E57373"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#D32F2F"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#C2185B"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#F57C00"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#FBC02D"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#AFB42B"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#689F38"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#388E3C"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#00796B"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#0097A7"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#0288D1"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#1976D2"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#303F9F"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

            <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="#7B1FA2"
                    />
            <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>
        </LinearLayout>
    </HorizontalScrollView>


    <TextView
            android:id="@+id/statusText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/lorem"/>
</LinearLayout>